# PatchScope

./: .editorconfig  .gitattributes  .gitignore  .mailmap  Dockerfile  LICENSE  Procfile  README.md  TODO.md  docker.patchscope-web.service  dvc.yaml  examples-init.bash  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.dvc/: config
.github/: dependabot.yml
.github/workflows/: pytest-coverage-comment.yml  python-app.yml  release.yml
data/examples/: .gitignore  README.md
data/examples/annotations/git/: .gitignore
data/examples/annotations/linux/: .gitignore
data/examples/annotations/qtile/: .gitignore
data/examples/annotations/tensorflow/: .gitignore
data/examples/stats/: .gitignore  README.md  hellogitworld.lines-stats.json  hellogitworld.lines-stats.purpose-to-type.json  hellogitworld.purpose-counter.json  hellogitworld.purpose-per-file.json  hellogitworld.timeline.json  hellogitworld.timeline.purpose-to-type.json  tensorflow.purpose-per-file.json  tensorflow.timeline.json  tensorflow.timeline.purpose-to-type.json
data/experiments/HaPy-Bug/: bip_blame.csv  hapybug_line_callback_func.py  repositories.json  run_annotation_bugsinpy_repos.sh  run_annotation_hapy_bip_repos.sh
data/experiments/SmartSHARK/: .gitignore  herbold_from_repos.csv.dvc  herbold_line_labels.csv.dvc  run_annotation_smartshark_repos.sh  smartshark_line_callback.py
docs/: .gitignore  annotation_process.md  api.md  author_statistics.md  cli.md  contributors_graph.md  diffinsights_web.md  examples.md  experiments.md  notebooks.md  schema.md
docs/assets/: optionalConfig.js
docs/notebooks/: 01-compare_annotations_HaPy-Bug.ipynb  02-compare_annotations_Herbold.ipynb
notebooks/: .gitignore  01-gather_data-explore.ipynb  README.md  requirements-dev.txt  requirements.txt
notebooks/bokeh/: activity_data.json  app.py  dashboard.py  heatmap.py  radar.py
notebooks/experiments/: 00-HaPy_Bug-Paper.ipynb  01-compare_annotations.ipynb  02-compare_annotations_Herbold.ipynb  Paper.ipynb
notebooks/panel/: 00-panel-Debugger-demo.ipynb  00-panel-demo.ipynb  00-panel-simple-Matplotlib.ipynb  01-timeline.ipynb  02-contributors_graph.ipynb  02-contributors_graph.py  03-author_Sankey.ipynb  README.md  TODO.md
schema/: README.md
scripts/: gen_api_ref_pages.py  gen_cli_ref_pages.py  gen_ref_pages.py  my_hooks.py
src/diffannotator/: :w  TODO.md  annotate.py  config.py  gather_data.py  generate_patches.py  languages.py  lexer.py  new_annotate.py  requirements.txt  single_diff_annotator.py  test.py  test_annotate.py  test_cli.py  test_gather_data.py  test_languages.py  test_lexer.py
src/diffannotator/test_code_fragments/: example_line_callback.py.body
src/diffannotator/utils/: git.py
src/diffinsights_web/: 02-contributors_graph.py  03-author_Sankey.py  README.md  TODO.md  main.py
src/diffinsights_web/apps/: author.py  contributors.py  explore_author.py  explore_repo.py
src/diffinsights_web/datastore/: __init__.py  linesstats.py  timeline.py
src/diffinsights_web/utils/: __init__.py  avatars.py  humanize.py  notifications.py
src/diffinsights_web/views/: __init__.py  authorsgrid.py  dataexplorer.py  info.py
src/diffinsights_web/views/plots/: period.py  sankey.py  sankey_mermaid.py  timeseries.py
src/diffinsights_web/widgets/: caching.py
tests/: conftest.py  test_annotate.py  test_app_contributors_performance.py  test_cli.py  test_config.py  test_datastore_linesstats.py  test_gather_data.py  test_generate_patches.py  test_languages.py  test_lexer.py  test_pandas_deserialization_performance.py  test_utils_git.py  test_utils_git_performance.py  test_views_info.py
tests/helpers/: spew.py
tests/performance/: test_app_contributors_performance.py  test_pandas_deserialization_performance.py
tests/test_code_fragments/: example_line_callback.py.body  example_line_callback_func.py
tests/test_dataset/: binary_files_differ.diff  with_mode_change.diff  with_submodule_added.diff  with_submodule_removed.diff
tests/test_dataset/tensorflow/: .gitattributes
