[build-system]
requires = ["setuptools>=62.6"]
build-backend = "setuptools.build_meta"

[project]
name = "diffannotator"
# 'version' is now defined dynamically
description = "Annotate files and lines of diffs (patches) with their purpose and type"
readme = "README.md"
keywords = [
  "msr",
  "mining-software-repositories",
  "code-analysis",
]
authors = [
  {name = "Mikołaj Fejzer", email = "mfejzer@mat.umk.pl"},
  {name = "Jakub Narębski", email = "jnareb@mat.umk.pl"},
  {name = "Piotr Przymus", email = "piotr.przymus@mat.umk.pl"},
  {name = "Krzysztof Stencel", email = "stencel@mimuw.edu.pl"}
]
maintainers = [
  {name = "Mikołaj Fejzer", email = "mfejzer@mat.umk.pl"},
  {name = "Jakub Narębski", email = "jnareb@mat.umk.pl"},
  {name = "Piotr Przymus", email = "piotr.przymus@mat.umk.pl"},
  {name = "Krzysztof Stencel", email = "stencel@mimuw.edu.pl"}
]
license = {text = "MIT license"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Environment :: Console",
]
requires-python = ">= 3.9"  # vermin --eval-annotations --backport typing --backport typing_extensions .
dynamic = ["dependencies", "version"]

[project.scripts]
diff-generate = "diffannotator.generate_patches:app"
diff-annotate = "diffannotator.annotate:app"
diff-gather-stats = "diffannotator.gather_data:app"

[project.urls]
bugs = "https://github.com/ncusi/python-diff-annotator/issues"
homepage = "https://github.com/ncusi/python-diff-annotator"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "diffannotator.config.__version__"}

# Currently, when specifying `optional-dependencies` dynamically, all the
# groups must be specified dynamically; one can not specify some of them
# statically and some of them dynamically.
#
# configuration error: You cannot provide a value for `project.optional-dependencies`
#                      and list it under `project.dynamic` at the same time
#
# see: https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#dynamic-metadata
[project.optional-dependencies]
dev = ["pytest==8.3.3"]
pylinguist = ["linguist@git+https://github.com/retanoj/linguist#egg=master"]
examples = ["dvc==3.56.0"]
web = [
  "panel==1.5.4",
  "param==2.1.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.setuptools.packages.find]
where = ["src"]
