[build-system]
requires = ["setuptools>=62.6"]
build-backend = "setuptools.build_meta"

[project]
name = "patchscope"
# 'version' is now defined dynamically
description = "Annotate files and lines of diffs (patches) with their purpose and type"
readme = "README.md"
keywords = [
  "msr",
  "mining-software-repositories",
  "code-analysis",
]
authors = [
  {name = "Mikołaj Fejzer", email = "mfejzer@mat.umk.pl"},
  {name = "Jakub Narębski", email = "jnareb@mat.umk.pl"},
  {name = "Piotr Przymus", email = "piotr.przymus@mat.umk.pl"},
  {name = "Krzysztof Stencel", email = "stencel@mimuw.edu.pl"}
]
maintainers = [
  {name = "Mikołaj Fejzer", email = "mfejzer@mat.umk.pl"},
  {name = "Jakub Narębski", email = "jnareb@mat.umk.pl"},
  {name = "Piotr Przymus", email = "piotr.przymus@mat.umk.pl"},
  {name = "Krzysztof Stencel", email = "stencel@mimuw.edu.pl"}
]
license = {text = "MIT license"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Environment :: Console",
]
requires-python = ">= 3.9"  # vermin --eval-annotations --backport typing --backport typing_extensions .
dynamic = ["dependencies", "version"]

[project.scripts]
diff-generate = "diffannotator.generate_patches:app"
diff-annotate = "diffannotator.annotate:app"
diff-gather-stats = "diffannotator.gather_data:app"

[project.urls]
bugs = "https://github.com/ncusi/PatchScope/issues"
homepage = "https://github.com/ncusi/PatchScope"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "diffannotator.config.__version__"}

# Currently, when specifying `optional-dependencies` dynamically, all the
# groups must be specified dynamically; one can not specify some of them
# statically and some of them dynamically.
#
# configuration error: You cannot provide a value for `project.optional-dependencies`
#                      and list it under `project.dynamic` at the same time
#
# see: https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#dynamic-metadata
[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
]
doc = [
  "mkdocs~=1.6.1",
  "mkdocs-include-markdown-plugin~=7.1.2",
  #"mkdocs-autorefs~=1.2.0",
  "mkdocstrings[python]~=0.27.0",
  "mkdocs-gen-files~=0.5.0",
  "mkdocs-literate-nav~=0.6.1",
  "mkdocs-section-index~=0.3.9",
  "mkdocs-typer~=0.0.3",
  "mkdocs-material~=9.5.48",
  #"mike~=1.1.2",
  #"setuptools~=68.0",
  #"pkginfo~=1.9",
  #"virtualenv~=20.0",
]
pylinguist = [
  "linguist@git+https://github.com/retanoj/linguist#egg=master",
]
examples = [
  "dvc[s3]==3.58.0",
]  # dvc-s3 is needed to access 'dagshub' dvc remote
web = [
  "panel==1.5.4",
  "param==2.1.1",
  # data processing
  "pandas==2.2.3",
  "python-dateutil==2.9.0.post0",
  # plots
  "holoviews==1.20.0",
  "hvplot==0.11.1",
  "matplotlib==3.9.3",
  "seaborn==0.13.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.setuptools.packages.find]
where = ["src"]
