[build-system]
requires = ["setuptools>=62.6"]
build-backend = "setuptools.build_meta"

[project]
name = "patchscope"
# 'version' is now defined dynamically
description = "Annotate files and lines of diffs (patches) with their purpose and type"
readme = "README.md"
keywords = [
  "msr",
  "mining-software-repositories",
  "code-analysis",
]
authors = [
  {name = "Jakub Narębski", email = "jnareb@mat.umk.pl"},
  {name = "Mikołaj Fejzer", email = "mfejzer@mat.umk.pl"},
  {name = "Piotr Przymus", email = "piotr.przymus@mat.umk.pl"},
  {name = "Krzysztof Stencel", email = "stencel@mimuw.edu.pl"}
]
maintainers = [
  {name = "Jakub Narębski", email = "jnareb@mat.umk.pl"},
  {name = "Mikołaj Fejzer", email = "mfejzer@mat.umk.pl"},
  {name = "Piotr Przymus", email = "piotr.przymus@mat.umk.pl"},
  {name = "Krzysztof Stencel", email = "stencel@mimuw.edu.pl"}
]
license = {text = "MIT license"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Information Technology",
  "Topic :: Software Development",
]
# panel-mermaid requires Python 3.11
requires-python = ">= 3.11"  # vermin --eval-annotations --backport typing --backport typing_extensions .
dynamic = ["dependencies", "version"]

[project.scripts]
diff-generate = "diffannotator.generate_patches:app"
diff-annotate = "diffannotator.annotate:app"
diff-gather-stats = "diffannotator.gather_data:app"
diffinsights-web = "diffinsights_web.main:app"

[project.urls]
repository = "https://github.com/ncusi/PatchScope"
issues = "https://github.com/ncusi/PatchScope/issues"
documentation = "https://ncusi.github.io/PatchScope/"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "diffannotator.config.__version__"}

# Currently, when specifying `optional-dependencies` dynamically, all the
# groups must be specified dynamically; one can not specify some of them
# statically and some of them dynamically.
#
# configuration error: You cannot provide a value for `project.optional-dependencies`
#                      and list it under `project.dynamic` at the same time
#
# see: https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#dynamic-metadata
[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
  "pytest-benchmark==5.1.0",
]
doc = [
  "mkdocs~=1.6.1",
  "mkdocs-include-markdown-plugin~=7.1.2",
  #"mkdocs-autorefs~=1.2.0",
  "mkdocstrings[python]~=0.29.0",
  "mkdocs-gen-files~=0.5.0",
  "mkdocs-literate-nav~=0.6.1",
  "mkdocs-section-index~=0.3.9",
  "mkdocs-typer2~=0.1.4",
  "mkdocs-material~=9.6.7",
  "mkdocs-jupyter~=0.25.1",
  #"mike~=1.1.2",
  #"setuptools~=68.0",
  #"pkginfo~=1.9",
  #"virtualenv~=20.0",
  "black~=25.1.0",
]
pylinguist = [
  "linguist@git+https://github.com/retanoj/linguist#egg=master",
]
examples = [
  "dvc[s3]==3.59.2",
]  # dvc-s3 is needed to access 'dagshub' dvc remote
web = [
  "panel==1.6.1",
  "param==2.2.0",
  # data processing
  "pandas==2.3.0",
  "python-dateutil==2.9.0.post0",
  # data serialization
  "pyarrow==20.0.0",
  # plots
  "holoviews==1.20.0",
  "hvplot==0.11.2",
  "matplotlib==3.10.3",
  "seaborn==0.13.2",
  "panel-mermaid==0.2.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.setuptools.packages.find]
where = ["src"]
